# clawteam

./: .gitignore  assignments.yaml  compliance.yaml  pyproject.toml  storage.yaml
agents/: _template.yaml  architect_mark.yaml  assistant_nora.yaml  ops_emily.yaml  quality_ken.yaml  tester_alice.yaml
scripts/: add-agent.sh  export-memory.sh  import-memory.sh  manage-workitems.sh  preflight-check.sh  remove-agent.sh  render-workspace.py  rollback-agents.sh  setup-agents.sh  setup-env.sh  update-agent.sh
src/clawteam_glm/: __init__.py  config.py  detector.py  memory.py  renderer.py  workspace.py
team/: _template.yaml
templates/: AGENTS.md.tmpl  HEARTBEAT.md.tmpl  IDENTITY.md.tmpl  SOUL.md.tmpl  TEAM.md.tmpl  TOOLS.md.tmpl
tests/: conftest.py  test_config.py  test_detector.py  test_integration.py  test_memory.py  test_renderer.py  test_workspace.py
tools/: _template.yaml
tools/codearts/: issue_crud.yaml  project_query.yaml  repo_operations.yaml
tools/feishu/: calendar.yaml  drive.yaml  group_management.yaml  messaging.yaml
tools/git/: branch.yaml  commit.yaml  merge_request.yaml
work_items/: _template.yaml  architecture_design.yaml  code_review.yaml  daily_report.yaml  defect_reporting.yaml  deploy_execution.yaml  deploy_review.yaml  doc_management.yaml  group_facilitation.yaml  meeting_minutes.yaml  ops_documentation.yaml  progress_tracking.yaml  requirement_analysis.yaml  review_report.yaml  risk_assessment.yaml  task_registration.yaml  test_automation.yaml  test_case_generation.yaml  test_execution.yaml
(+2 files in other folders)
